Improved look&feel, more logic around contact us form.

--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,23 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-
   <title>{codio.pro}</title>
+
+  <meta charset="utf-8">
+
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+
   <meta name="description" content="codio.pro Software Development as a Service">
   <meta name="author" content="codio.pro Engineering Team">
 
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+
   <link href='https://fonts.googleapis.com/css?family=Oxygen+Mono' rel='stylesheet' type='text/css'>
   <link rel="import" href="dark-side.html">
   <link rel="import" href="x-app.html">
+
 </head>
 <body unresolved>
 
